fix(activities): Add vertical align top to activities

--- a/app/modules/history/history/history-templates/history-templates.scss
+++ b/app/modules/history/history/history-templates/history-templates.scss
@@ -19,6 +19,7 @@
     .diff-status-wrapper {
         p {
             display: inline-block;
+            vertical-align: top;
         }
         ins {
             background: lighten(rgba($primary-light, .3), 20%);
